# metricx

./: README.md  pyproject.toml
metricx/: predict.py
metricx23/: __init__.py  predict.py
tests/: input.jsonl  input.tsv
